@@ -26,5 +26,5 @@ frontend_app = frontend.create_app()
 application = DispatcherMiddleware(frontend_app, {'/api': api_app})
 
 if __name__ == "__main__":
-    # run_simple('0.0.0.0', 5000, application, use_reloader=True, use_debugger=True)
+#     run_simple('0.0.0.0', 5000, application, use_reloader=True, use_debugger=True)
     run_simple('0.0.0.0', 5000, application, use_reloader=False, use_debugger=True)
