@@ -1,3 +1,5 @@
+1.pager抽离成macro了
+----------------------------------------------------------------
 1.由于emial没有用到，但是wtforms提交的时候会把空字符串填上，所以就把email给了个初始值了。
 ----------------------------------------------------------------
 1.增加一些图标
